Updated Clean and Analyze Employee exit survey

--- a/Clean And Analyze Employee Exit Surveys.ipynb
+++ b/Clean And Analyze Employee Exit Surveys.ipynb
@@ -36,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read data files\n",
-    "dete_survey = pd.read_csv(\"dete_survey.csv\")\n",
+    "dete_survey = pd.read_csv(\"dete_survey.csv\", na_values=\"Not Stated\")\n",
     "tafe_survey = pd.read_csv(\"tafe_survey.csv\", engine='python')"
    ]
   },
@@ -55,7 +55,19 @@
     "    - Yes/No\n",
     "    - True/False\n",
     "    - Strongly Agree/Agree..../Strongly Disagree/NA (both in short form and abbreviated form)\n",
-    "    - Few custom options to choose from"
+    "    - Few custom options to choose from\n",
+    "    - Few \"not stated\" values in the data that are not represented as NaN."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop some columns from each dataframe that we won't use in our analysis\n",
+    "dete_survey_updated = dete_survey.drop(dete_survey.columns[28:49], axis=1)\n",
+    "tafe_survey_updated = tafe_survey.drop(tafe_survey.columns[17:66], axis=1)"
    ]
   },
   {
