Updated Clean and Analyze Employee exit survey

--- a/Clean And Analyze Employee Exit Surveys.ipynb
+++ b/Clean And Analyze Employee Exit Surveys.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,13 +30,15 @@
     "# SETTINGS\n",
     "%matplotlib inline\n",
     "\n",
+    "pd.options.display.max_columns = 50\n",
+    "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,8 +62,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------------------------\n",
+    "Since the questions which we want to answer does not need many columns in the data sets lets remove them for ease of working."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +81,468 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets clean the column names and arrive at a standard as eventually we want to merge these datasets.\n",
+    "\n",
+    "- we will strip any leading or trailing spaces\n",
+    "- use lower case\n",
+    "- replace \"space\" with \"_\"\n",
+    "- rename columns in tafe dataset to match names in dete dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>separationtype</th>\n",
+       "      <th>cease_date</th>\n",
+       "      <th>dete_start_date</th>\n",
+       "      <th>role_start_date</th>\n",
+       "      <th>position</th>\n",
+       "      <th>classification</th>\n",
+       "      <th>region</th>\n",
+       "      <th>business_unit</th>\n",
+       "      <th>employment_status</th>\n",
+       "      <th>career_move_to_public_sector</th>\n",
+       "      <th>career_move_to_private_sector</th>\n",
+       "      <th>interpersonal_conflicts</th>\n",
+       "      <th>job_dissatisfaction</th>\n",
+       "      <th>dissatisfaction_with_the_department</th>\n",
+       "      <th>physical_work_environment</th>\n",
+       "      <th>lack_of_recognition</th>\n",
+       "      <th>lack_of_job_security</th>\n",
+       "      <th>work_location</th>\n",
+       "      <th>employment_conditions</th>\n",
+       "      <th>maternity/family</th>\n",
+       "      <th>relocation</th>\n",
+       "      <th>study/travel</th>\n",
+       "      <th>ill_health</th>\n",
+       "      <th>traumatic_incident</th>\n",
+       "      <th>work_life_balance</th>\n",
+       "      <th>workload</th>\n",
+       "      <th>none_of_the_above</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>aboriginal</th>\n",
+       "      <th>torres_strait</th>\n",
+       "      <th>south_sea</th>\n",
+       "      <th>disability</th>\n",
+       "      <th>nesb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Ill Health Retirement</td>\n",
+       "      <td>08/2012</td>\n",
+       "      <td>1984.0</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>Public Servant</td>\n",
+       "      <td>A01-A04</td>\n",
+       "      <td>Central Office</td>\n",
+       "      <td>Corporate Strategy and Peformance</td>\n",
+       "      <td>Permanent Full-time</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>56-60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Voluntary Early Retirement (VER)</td>\n",
+       "      <td>08/2012</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Public Servant</td>\n",
+       "      <td>AO5-AO7</td>\n",
+       "      <td>Central Office</td>\n",
+       "      <td>Corporate Strategy and Peformance</td>\n",
+       "      <td>Permanent Full-time</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>56-60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                    separationtype cease_date  dete_start_date  \\\n",
+       "0   1             Ill Health Retirement    08/2012           1984.0   \n",
+       "1   2  Voluntary Early Retirement (VER)    08/2012              NaN   \n",
+       "\n",
+       "   role_start_date        position classification          region  \\\n",
+       "0           2004.0  Public Servant        A01-A04  Central Office   \n",
+       "1              NaN  Public Servant        AO5-AO7  Central Office   \n",
+       "\n",
+       "                       business_unit    employment_status  \\\n",
+       "0  Corporate Strategy and Peformance  Permanent Full-time   \n",
+       "1  Corporate Strategy and Peformance  Permanent Full-time   \n",
+       "\n",
+       "   career_move_to_public_sector  career_move_to_private_sector  \\\n",
+       "0                          True                          False   \n",
+       "1                         False                          False   \n",
+       "\n",
+       "   interpersonal_conflicts  job_dissatisfaction  \\\n",
+       "0                    False                 True   \n",
+       "1                    False                False   \n",
+       "\n",
+       "   dissatisfaction_with_the_department  physical_work_environment  \\\n",
+       "0                                False                      False   \n",
+       "1                                False                      False   \n",
+       "\n",
+       "   lack_of_recognition  lack_of_job_security  work_location  \\\n",
+       "0                 True                 False          False   \n",
+       "1                False                 False          False   \n",
+       "\n",
+       "   employment_conditions  maternity/family  relocation  study/travel  \\\n",
+       "0                  False             False       False         False   \n",
+       "1                  False             False       False         False   \n",
+       "\n",
+       "   ill_health  traumatic_incident  work_life_balance  workload  \\\n",
+       "0       False               False              False     False   \n",
+       "1       False               False              False     False   \n",
+       "\n",
+       "   none_of_the_above gender    age aboriginal torres_strait south_sea  \\\n",
+       "0               True   Male  56-60        NaN           NaN       NaN   \n",
+       "1              False   Male  56-60        NaN           NaN       NaN   \n",
+       "\n",
+       "  disability nesb  \n",
+       "0        NaN  Yes  \n",
+       "1        NaN  NaN  "
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Institute</th>\n",
+       "      <th>WorkArea</th>\n",
+       "      <th>cease_date</th>\n",
+       "      <th>separationtype</th>\n",
+       "      <th>Contributing Factors. Career Move - Public Sector</th>\n",
+       "      <th>Contributing Factors. Career Move - Private Sector</th>\n",
+       "      <th>Contributing Factors. Career Move - Self-employment</th>\n",
+       "      <th>Contributing Factors. Ill Health</th>\n",
+       "      <th>Contributing Factors. Maternity/Family</th>\n",
+       "      <th>Contributing Factors. Dissatisfaction</th>\n",
+       "      <th>Contributing Factors. Job Dissatisfaction</th>\n",
+       "      <th>Contributing Factors. Interpersonal Conflict</th>\n",
+       "      <th>Contributing Factors. Study</th>\n",
+       "      <th>Contributing Factors. Travel</th>\n",
+       "      <th>Contributing Factors. Other</th>\n",
+       "      <th>Contributing Factors. NONE</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>employment_status</th>\n",
+       "      <th>position</th>\n",
+       "      <th>LengthofServiceOverall. Overall Length of Service at Institute (in years)</th>\n",
+       "      <th>institute_service</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>634133009996094000</td>\n",
+       "      <td>Southern Queensland Institute of TAFE</td>\n",
+       "      <td>Non-Delivery (corporate)</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Contract Expired</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>26 – 30</td>\n",
+       "      <td>Temporary Full-time</td>\n",
+       "      <td>Administration (AO)</td>\n",
+       "      <td>1-2</td>\n",
+       "      <td>1-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>634133654064531000</td>\n",
+       "      <td>Mount Isa Institute of TAFE</td>\n",
+       "      <td>Non-Delivery (corporate)</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Retirement</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Travel</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   id                              Institute  \\\n",
+       "0  634133009996094000  Southern Queensland Institute of TAFE   \n",
+       "1  634133654064531000            Mount Isa Institute of TAFE   \n",
+       "\n",
+       "                   WorkArea  cease_date    separationtype  \\\n",
+       "0  Non-Delivery (corporate)      2010.0  Contract Expired   \n",
+       "1  Non-Delivery (corporate)      2010.0        Retirement   \n",
+       "\n",
+       "  Contributing Factors. Career Move - Public Sector  \\\n",
+       "0                                               NaN   \n",
+       "1                                                 -   \n",
+       "\n",
+       "  Contributing Factors. Career Move - Private Sector  \\\n",
+       "0                                                NaN   \n",
+       "1                                                  -   \n",
+       "\n",
+       "  Contributing Factors. Career Move - Self-employment  \\\n",
+       "0                                                NaN    \n",
+       "1                                                  -    \n",
+       "\n",
+       "  Contributing Factors. Ill Health Contributing Factors. Maternity/Family  \\\n",
+       "0                              NaN                                    NaN   \n",
+       "1                                -                                      -   \n",
+       "\n",
+       "  Contributing Factors. Dissatisfaction  \\\n",
+       "0                                   NaN   \n",
+       "1                                     -   \n",
+       "\n",
+       "  Contributing Factors. Job Dissatisfaction  \\\n",
+       "0                                       NaN   \n",
+       "1                                         -   \n",
+       "\n",
+       "  Contributing Factors. Interpersonal Conflict Contributing Factors. Study  \\\n",
+       "0                                          NaN                         NaN   \n",
+       "1                                            -                           -   \n",
+       "\n",
+       "  Contributing Factors. Travel Contributing Factors. Other  \\\n",
+       "0                          NaN                         NaN   \n",
+       "1                       Travel                           -   \n",
+       "\n",
+       "  Contributing Factors. NONE  gender      age    employment_status  \\\n",
+       "0                        NaN  Female  26 – 30  Temporary Full-time   \n",
+       "1                          -     NaN      NaN                  NaN   \n",
+       "\n",
+       "              position  \\\n",
+       "0  Administration (AO)   \n",
+       "1                  NaN   \n",
+       "\n",
+       "  LengthofServiceOverall. Overall Length of Service at Institute (in years)  \\\n",
+       "0                                                1-2                          \n",
+       "1                                                NaN                          \n",
+       "\n",
+       "  institute_service  \n",
+       "0               1-2  \n",
+       "1               NaN  "
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dete_survey_updated.columns = dete_survey_updated.columns.str.strip().str.lower().str.replace(' ', '_')\n",
+    "\n",
+    "tafe_survey_updated.columns = tafe_survey_updated.columns.str.strip().str.replace('\\s+', ' ')\n",
+    "tafe_survey_updated = tafe_survey_updated.rename({'Record ID': 'id', 'CESSATION YEAR': 'cease_date', 'Reason for ceasing employment': 'separationtype', 'Gender. What is your Gender?': 'gender', 'CurrentAge. Current Age': 'age', 'Employment Type. Employment Type': 'employment_status', 'Classification. Classification': 'position', 'LengthofServiceCurrent. Length of Service at current workplace (in years)': 'institute_service'}, axis=1)\n",
+    "\n",
+    "dete_survey_updated.head(2)\n",
+    "tafe_survey_updated.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age Retirement                          285\n",
+       "Resignation-Other reasons               150\n",
+       "Resignation-Other employer               91\n",
+       "Resignation-Move overseas/interstate     70\n",
+       "Voluntary Early Retirement (VER)         67\n",
+       "Ill Health Retirement                    61\n",
+       "Other                                    49\n",
+       "Contract Expired                         34\n",
+       "Termination                              15\n",
+       "Name: separationtype, dtype: int64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Resignation                 340\n",
+       "Contract Expired            127\n",
+       "Retrenchment/ Redundancy    104\n",
+       "Retirement                   82\n",
+       "Transfer                     25\n",
+       "Termination                  23\n",
+       "Name: separationtype, dtype: int64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dete_survey_updated['separationtype'].value_counts()\n",
+    "tafe_survey_updated['separationtype'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we look into unique values of \"separationtype\" column, there are different types. For now we will look at only \"Resignation\" type for our analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dete_resignations = dete_survey_updated[dete_survey_updated['separationtype'].isin(['Resignation-Other reasons', 'Resignation-Other employer', 'Resignation-Move overseas/interstate'])].copy()\n",
+    "\n",
+    "tafe_resignations = tafe_survey_updated[tafe_survey_updated['separationtype'] == 'Resignation'].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we will look into \"cease_date\" and \"dete_start_date\" columns for any abnormalities."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
